	* log_stats now uses more precise frametime measurement for high fps
* Added an FPS meter to cl_showinfo
* Map fixes to z_tdm_labrats, z_tdm_warehouse (fixed brushes cutting into each other)
* Major change to z_tdm_subway:
	- There are now two rails and trains
	- Each train only goes one way

BUG FIXES:
* Fixed hover and clicked UI images not scaling with the hudscale cvar
* Fixed maps without skyboxes trying to load a nonexistent skybox by loading a sane defualt

OTHER ENHANCEMENTS AND CHANGES:
* Changed the bamfuslicator texture to have a green tint in order to distinguish it from the supershotgun's model.
* Play a fail sound when the Bamfuslicator fails to spawn an enemy
* Renamed S_RegisterSexedModel -> S_RegisterPlayerModel
* Changed func_team_door from being a point entity to a brush entity
* Made MSG_WriteChar just call MSG_WriteByte rather than duplicate its functionality
	* Change some MSG_WriteChar calls to MSG_WriteByte

REMOVALS:
* Removed ValidateSelectedItem function (doesn't do anything???)
* Removed the BFG
	* It's an iconic quake weapon and can't really be used in Zombono
	* It was broken anyway due to using SP2s (the only thing that used them at all!)

Version 0.0.7.299 (Build 299)
April 20, 2024

NEW FEATURES:
* The game now updates automatically! When you start the game, if an update is available, a message box will appear and you will be able to update the game.
	* The 7zip window while updating is temporary and will be removed in the next release when an actual update utility is written.
* Renamed cl_showpos to cl_showinfo:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles being rendered
* Added option to switch between borderless and dedicated fullscreen to settings
* Added lighting to z_tdm_warehouse 