@@ -248,7 +248,7 @@ void CL_ParseMuzzleFlash (void)
 
 	i = MSG_ReadShort (&net_message);
 	if (i < 1 || i >= MAX_EDICTS)
-		Com_Error (ERR_DROP, "CL_ParseMuzzleFlash: bad entity");
+		Com_Error (ERR_DROP, "CL_ParseMuzzleFlash: bad entity %d", i);
 
 	weapon = MSG_ReadByte (&net_message);
 	silenced = weapon & MZ_SILENCED;
